# deepfin

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHECKPOINT_01_Config_Logging.md  CHECKPOINT_SETUP_COMPLETE.md  CLAUDE.md  CONTRIBUTING.md  Claude - Shortcut.lnk  GITHUB_SPEC_KIT_IMPLEMENTATION_PLAN.md  JOURNEY.md  LINEAR_SYNC_FIX.md  OPTION_A_B_COMPLETE.md  PROGRESS_TRACKER.md  PROJECT_CAPABILITIES_DOCUMENTATION.md  QUICK_TASK_LIST.md  README.md  SESSION_16_INTEGRATION_TESTS.md  SESSION_3_PLANNING.md  SESSION_CHECKLIST.md  SESSION_MANIFEST.md  START_HERE.md  YOUR_CUSTOM_REQUIREMENTS.md  YOUR_SETUP_CHECKLIST.md  alembic.ini  pyproject.toml  session_data.py
.github/: pull_request_template.md
.github/workflows/: README.md  checkpoint-generator.yml  claude-review.yml  linear-sync.yml  validation.yml
alembic/: env.py
alembic/versions/: 20251222_1519_d7fdd70aca5d_add_detection_tables.py  20251223_0000_51ede09ed895_add_statements_tables.py  20251224_1414_5d8c7e7b7f8e_add_extraction_tables.py  20251225_2012_add_consolidation_tables.py  20251225_2130_add_jobs_table.py  20251226_0800_add_users_table.py  20251226_1516_cd67a2114fdf_rename_order_to_display_order.py
app/: __init__.py  main.py
app/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py
app/consolidation/: __init__.py  exporter.py  models.py  routes.py  schemas.py  service.py
app/core/: __init__.py  config.py  database.py  exceptions.py  health.py  logging.py  middleware.py  output_manager.py
app/detection/: __init__.py  detector.py  models.py  routes.py  schemas.py  service.py
app/export/: __init__.py  excel_exporter.py
app/extraction/: __init__.py  document_detector.py  hybrid_pipeline.py  models.py  page_detector.py  parser.py  pydantic_extractor.py  routes.py  schemas.py  service.py
app/jobs/: __init__.py  models.py  routes.py  schemas.py  service.py  tasks.py  worker.py
app/llm/: __init__.py  async_wrapper.py  cache.py  clients.py  schemas.py
app/notifications/: __init__.py  notifications.py  service.py
app/schemas/: __init__.py  base_schema.py  income_statement_schema.py
app/shared/: __init__.py  models.py  schemas.py
app/statements/: __init__.py  models.py  routes.py  schemas.py  service.py
brownfield/: CLAUDE.md  README.md
brownfield/core/: __init__.py  cross_platform_paths.py  migration_safety.py  pipeline_01_2_enterprise_manager.py  pipeline_logger.py  project_paths.py
brownfield/old_docs/: CASH_FLOW_PIPELINE_FIX_SUMMARY.md  PIPELINE_ARCHITECTURE_FLOW.md  (+1 more)
docs/: FOLDER_STRUCTURE.md  JOURNEY.md  PARALLEL_EXTRACTION_INVESTIGATION.md  SESSION-17.5-SUMMARY.md  SESSION-17.6-FINAL-PLAN.md  SESSION-17.6-PREP.md  SESSION-17.6-REVISED-PLAN.md  SESSION-17.6-SUMMARY.md  SYSTEM-REDESIGN-data-integrity.md  ULTRATHINK-FINAL-are-we-over-engineering.md  ULTRATHINK-session-17.6-architecture.md  __init__.py  bugfix-cash-flow-detection.md  critical-bug-consolidation-duplicate-accounts.md  validation-summary-google-pdfs.md
input/: README.md
output/: RUN_HISTORY.md
reference/: output-manager-summary.md  page-detection-comparison.md  zero-hardcoding-proof.md
samples/: README.md
scripts/: README.md  cleanup_failed_runs.py  complete-session.ps1  consolidate_hybrid_outputs.py  create-session-pr.ps1  create-session-pr.sh  debug_google_detection.py  get-linear-team-id.py  path_config.py  process_all.py  process_multiple_pdfs.py  process_pdf.py  process_pdf_hybrid.py  process_pdf_standalone.py  quick-check.bat  quick-check.sh  stress_test_system.py  test-linear-api.py  test-linear-workflow.py  test_api_concurrency.py  test_api_simple.py  test_async_wrapper.py  test_end_to_end_pipeline.py  test_output_structure.py  validate.bat  validate.sh  validate_production_ready.py  validate_system_accuracy.py  verify-linear.py  verify-session-complete.ps1
tests/: __init__.py  conftest.py  test_main.py
uploads/: README.md
(+421 files in other folders)
